--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -11,7 +11,7 @@
 	</h1>
 
 	<h2 class="custom-h2">
-		An early-stage investment firm focused on food, agriculture, and health & wellness technologies.
+		An early-stage investment firm focused on food, agriculture, and health & wellness technologies
 	</h2>
 
 	<%= link_to 'Launch', '#', :class => 'btn btn-danger btn-large' %>
