--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -4,6 +4,7 @@
 	box-shadow: 2px -2px 2px 2px rgba(36,32,33,0.50);
 	background-color: rgba(40,1,217,0.50);
 	padding: 1%;
+	color: white;
 }
 
 body{
@@ -19,12 +20,14 @@ body{
 		font-family: 'Raleway', Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
 		font-weight: 100;
 		font-size: 50px;
+		line-height: 50px;
 }
 
 .custom-h2 {
 		color: white;
 		font-family: 'Raleway', Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
 		font-weight: 100;
-		font-size: 32;
+		font-size: 50;
+		line-height: 50px;
 
 }
