--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -17,7 +17,7 @@ body{
 
 .custom-h1 {
 		color: white;
-		font-family: 'Raleway', Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
+		font-family: futura-pt, Helvetica Neue Light, Helvetica Neue, Helvetica, san-serif;
 		font-weight: 100;
 		font-size: 50px;
 		line-height: 50px;
@@ -30,4 +30,8 @@ body{
 		font-size: 50;
 		line-height: 50px;
 
+}
+
+#myCarousel {
+	width:20px;
 }
