--- a/app/views/pics/new.html.erb
+++ b/app/views/pics/new.html.erb
@@ -1,4 +1,4 @@
-<div class="smurfy span6 offset4 text-center">
+<div class="smurfy span6 offset3 text-center">
 
 	<h1 class="custom-h1">How did Kenny die?</h1>
 
@@ -8,6 +8,8 @@
 		<%= f.input :subtitle, label: 'More details', placeholder: 'e.g. Episode 112' %>
 	</br>
 		<%= f.input :message, label: 'What were Kenny\'s last words?', placeholder: 'ugh, aghhh' %>
+	</br>
+		<%= f.input :image, label: "Upload Your image" %>
 	</br>
 		<%= f.submit "Add my pic", :class => 'btn btn-warning btn-large' %>
 
