changed to HomeCooked

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,19 +20,17 @@
       </a>
  
       <!-- Be sure to leave the brand out there if you want it shown -->
-      <%= link_to 'Valley Oak Investments', root_path, :class => 'brand' %>
+      <%= link_to 'HomeCooked', root_path, :class => 'brand' %>
  
       <!-- Everything you want hidden at 940px or less, place within here -->
       <div class="nav-collapse collapse">
         <!-- .nav, .navbar-search, .navbar-form, etc -->
  		<ul class="nav">
 			<li>
-				<%= link_to 'Images', pics_path %>
+				<%= link_to 'Meals', pics_path %>
 			</li>
  			<li>
-				<%= link_to 'Form', new_pic_path %>
-			</li><li>
-				<%= link_to 'Contact', '#' %>
+				<%= link_to 'Add A Dish', new_pic_path %>
 			</li>
  		</ul>
 
