--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -4,11 +4,11 @@
 
 <div class="smurfy span4">
 	<h1 class="custom-h1">
-		Title: <%= pic.title %>
+		Dish: <%= pic.title %>
 	</h1>
 	<br/>
 	<h2 class="custom-h2">
-		Subtitle: <%= pic.subtitle %>
+		Price: <%= pic.subtitle %>
 	</h2>
 	<h2>
 	<br/>
@@ -16,7 +16,7 @@
 	</h2>
 	</br>
 	<h3 class="custom-h3">
-		Message:  <%= pic.message %>
+		Location, Date & Time:  <%= pic.message %>
 	</h3>
 
 </div>
