--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -7,53 +7,14 @@
 <div class="span6 offset3 smurfy text-center">
 
 	<h1 class="custom-h1">
-		Valley Oak Investments
+		HomeCooked
 	</h1>
 
 	<h2 class="custom-h2">
-		An early-stage investment firm focused on food, agriculture, and health & wellness technologies
+		The marketplace for home-cooked meals
 	</h2>
 
-	<%= link_to 'Launch', new_pic_path, :class => 'btn btn-danger btn-large' %>
+	<%= link_to 'Post a meal', new_pic_path, :class => 'btn btn-danger btn-large' %>
 
 </div>
 
-<div class="span4">
-<a class="twitter-timeline" href="https://twitter.com/nikohrdy" data-widget-id="437289520061366273">Tweets by @nikohrdy</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</div>
-
-<!-- Button to trigger modal -->
-<a href="#myModal" role="button" class="btn" data-toggle="modal">Launch demo modal</a>
- 
-<!-- Modal -->
-<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">My title here</h3>
-  </div>
-  <div class="modal-body">
-    <p>One fine body…</p>
-  </div>
-  <div class="modal-footer">
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary">Save changes</button>
-  </div>
-</div>
-
-<div id="myCarousel" class="carousel slide">
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
-  <!-- Carousel items -->
-  <div class="carousel-inner smurfy">
-    <div class="active item"><%= image_tag 'bluebottle.jpg' %></div>
-    <div class="item"><%= image_tag 'moasis.jpg' %></div>
-    <div class="item"><%= image_tag 'sanfranola.jpg' %></div>
-  </div>
-  <!-- Carousel nav -->
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-</div>
