fixed home page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -10,11 +10,27 @@
 		HomeCooked
 	</h1>
 
+</br>
+
 	<h2 class="custom-h2">
-		The marketplace for home-cooked meals
+		Your destination for exquisitely prepared home-cooked meals
 	</h2>
 
-	<%= link_to 'Post a meal', new_pic_path, :class => 'btn btn-danger btn-large' %>
+</br>
+</br>
+
+  <%= link_to 'Post a meal', new_pic_path, :class => 'btn btn-danger btn-large' %>
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  <%= link_to 'Eat a meal', pics_path, :class => 'btn btn-danger btn-large' %>
 
 </div>
 
